# SVD

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
images/dog/color-nocolor/color/: output-color-1.ppm  output-color-16.ppm  output-color-2.ppm  output-color-32.ppm  output-color-4.ppm  output-color-64.ppm  output-color-8.ppm
images/dog/color-nocolor/nocolor/: output-nocolor-1.pgm  output-nocolor-8.pgm
images/dog/output/: output_128.pgm  output_16.pgm  output_2.pgm  output_256.pgm  output_32.pgm  output_4.pgm  output_64.pgm
include/: cache.h  convert.h  image.h  svd.h  utils.h
include/cache/: cache.h
include/core/: cli.h  processor.h
include/image-processor/: convert.h
include/image-processor/pgm-ppm-parsers/: pgm.h  ppm.h
include/linear-algebra/: svd.h
src/: cache.c  cli.c  convert.c  image.c  main.c  pgm.c  ppm.c  processor.c  svd.c  utils.c
src/cache/: cache.c
src/core/: cli.c  processor.c  utils.c
src/image-processor/: convert.c  image.c
src/image-processor/pgm-ppm-parsers/: pgm.c  ppm.c
src/linear-algebra/: svd.c
